Fix report issue on phone

--- a/strand/iOS/Strand/Strand/DFNoContactsTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFNoContactsTableViewCell.xib
@@ -15,10 +15,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XCN-Ig-5Oi" userLabel="Centering Wrapper">
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XCN-Ig-5Oi" userLabel="Centering Wrapper">
                         <rect key="frame" x="8" y="15" width="304" height="74"/>
                         <subviews>
-                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="21E-2a-bnk" customClass="DFActionButton">
+                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="21E-2a-bnk" customClass="DFActionButton">
                                 <rect key="frame" x="40" y="36" width="225" height="38"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Add Results from Contacts">
