--- a/strand/iOS/Strand/Strand/DFPhotoFeedCell.xib
+++ b/strand/iOS/Strand/Strand/DFPhotoFeedCell.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="432" id="KGk-i7-Jjw" customClass="DFPhotoFeedCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="401"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="517" id="KGk-i7-Jjw" customClass="DFPhotoFeedCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="486"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalCompressionResistancePriority="900" verticalCompressionResistancePriority="900" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
@@ -37,14 +37,34 @@
                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="6Gw-h8-Can">
                         <rect key="frame" x="150" y="188" width="20" height="20"/>
                     </activityIndicatorView>
-                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="B5M-0I-S31" userLabel="moreOptionsButton" customClass="DFRoundedButton">
-                        <rect key="frame" x="290" y="300" width="30" height="20"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comments Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="304" translatesAutoresizingMaskIntoConstraints="NO" id="DCN-Jd-BMd">
+                        <rect key="frame" x="8" y="410" width="304" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQm-Ad-3iq" customClass="DFRoundedButton">
+                        <rect key="frame" x="8" y="434" width="75" height="24"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="gdO-FC-ViP"/>
-                            <constraint firstAttribute="height" constant="20" id="tOr-j5-HRy"/>
+                            <constraint firstAttribute="height" constant="24" id="Eif-ED-LTw"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <inset key="contentEdgeInsets" minX="8" minY="4" maxX="8" maxY="4"/>
+                        <state key="normal" title="Comment">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="3"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="B5M-0I-S31" userLabel="moreOptionsButton" customClass="DFRoundedButton">
+                        <rect key="frame" x="282" y="434" width="30" height="24"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
                         <state key="normal" title="...">
                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -52,6 +72,11 @@
                         <state key="selected">
                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="3"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                         <connections>
                             <action selector="moreOptionsButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Zzr-O1-SY2"/>
                         </connections>
@@ -60,15 +85,22 @@
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="h07-n4-DgV" secondAttribute="trailing" id="07M-SB-Mi0"/>
-                    <constraint firstItem="B5M-0I-S31" firstAttribute="bottom" secondItem="EPr-aP-pSV" secondAttribute="bottom" id="IOC-kM-Ymi"/>
-                    <constraint firstAttribute="bottom" secondItem="h07-n4-DgV" secondAttribute="bottom" id="MCp-yv-WuB"/>
+                    <constraint firstItem="TQm-Ad-3iq" firstAttribute="top" secondItem="DCN-Jd-BMd" secondAttribute="bottom" constant="8" id="7gb-D6-ngh"/>
+                    <constraint firstItem="TQm-Ad-3iq" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" priority="700" constant="8" id="KNo-zh-q08"/>
+                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Kdc-Vf-Rgd"/>
+                    <constraint firstAttribute="trailing" secondItem="DCN-Jd-BMd" secondAttribute="trailing" constant="8" id="La6-3G-hlg"/>
+                    <constraint firstItem="B5M-0I-S31" firstAttribute="bottom" secondItem="TQm-Ad-3iq" secondAttribute="bottom" id="Lcb-d3-KBT"/>
+                    <constraint firstAttribute="trailing" secondItem="B5M-0I-S31" secondAttribute="trailing" constant="8" id="Ny1-xo-gFd"/>
                     <constraint firstItem="h07-n4-DgV" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" constant="1" id="Q48-yN-yzu"/>
+                    <constraint firstItem="B5M-0I-S31" firstAttribute="top" secondItem="TQm-Ad-3iq" secondAttribute="top" id="R5S-My-bez"/>
+                    <constraint firstItem="TQm-Ad-3iq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Tc5-MX-qVf"/>
+                    <constraint firstAttribute="bottom" secondItem="TQm-Ad-3iq" secondAttribute="bottom" constant="27" id="Usn-Zp-9Mr"/>
                     <constraint firstItem="h07-n4-DgV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="W57-RD-aTX"/>
-                    <constraint firstAttribute="bottom" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="900" id="Xtu-ci-aht"/>
                     <constraint firstAttribute="trailing" secondItem="EPr-aP-pSV" secondAttribute="trailing" id="a0s-oA-S46"/>
+                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="700" constant="10" id="d6m-M6-kfK"/>
                     <constraint firstItem="EPr-aP-pSV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="fDr-AQ-CiI"/>
                     <constraint firstItem="EPr-aP-pSV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mPc-8w-nGX"/>
-                    <constraint firstItem="B5M-0I-S31" firstAttribute="trailing" secondItem="EPr-aP-pSV" secondAttribute="trailing" id="z0G-lF-dn0"/>
+                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" constant="10" id="zee-VV-RPM"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -78,7 +110,7 @@
                 <outlet property="moreOptionsButton" destination="B5M-0I-S31" id="vGA-wj-gj8"/>
                 <outlet property="photoImageView" destination="EPr-aP-pSV" id="f4q-6k-aBD"/>
             </connections>
-            <point key="canvasLocation" x="443" y="474.5"/>
+            <point key="canvasLocation" x="502" y="570"/>
         </tableViewCell>
     </objects>
 </document>
