--- a/strand/iOS/Strand/Strand/DFPhotoFeedCell.xib
+++ b/strand/iOS/Strand/Strand/DFPhotoFeedCell.xib
@@ -7,8 +7,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="517" id="KGk-i7-Jjw" customClass="DFPhotoFeedCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="486"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="537" id="KGk-i7-Jjw" customClass="DFPhotoFeedCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="506"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalCompressionResistancePriority="900" verticalCompressionResistancePriority="900" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
@@ -34,18 +34,23 @@
                         </collectionViewFlowLayout>
                         <cells/>
                     </collectionView>
-                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="6Gw-h8-Can">
-                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="6Gw-h8-Can">
+                        <rect key="frame" x="150" y="150" width="20" height="20"/>
                     </activityIndicatorView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="304" translatesAutoresizingMaskIntoConstraints="NO" id="DCN-Jd-BMd">
-                        <rect key="frame" x="8" y="410" width="304" height="16"/>
-                        <string key="text">Comments Label this is a very very long string and I'm hoping it will wrap to a newline so I can see how the contraints handle it</string>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" text="Likes label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="304" translatesAutoresizingMaskIntoConstraints="NO" id="d5e-Qd-WoU">
+                        <rect key="frame" x="31" y="410" width="64" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" text="Comments Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="304" translatesAutoresizingMaskIntoConstraints="NO" id="DCN-Jd-BMd">
+                        <rect key="frame" x="31" y="430" width="281" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TQm-Ad-3iq" customClass="DFRoundedButton">
-                        <rect key="frame" x="8" y="434" width="75" height="24"/>
+                        <rect key="frame" x="8" y="454" width="75" height="24"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="24" id="Eif-ED-LTw"/>
@@ -66,7 +71,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="B5M-0I-S31" userLabel="moreOptionsButton" customClass="DFRoundedButton">
-                        <rect key="frame" x="282" y="434" width="30" height="24"/>
+                        <rect key="frame" x="282" y="454" width="30" height="24"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                         <state key="normal" title="...">
@@ -85,38 +90,82 @@
                             <action selector="moreOptionsButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Zzr-O1-SY2"/>
                         </connections>
                     </button>
+                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/LikersListIcon" translatesAutoresizingMaskIntoConstraints="NO" id="4ef-R4-bae">
+                        <rect key="frame" x="8" y="410" width="17" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="17" id="06g-Li-y5U"/>
+                            <constraint firstAttribute="height" constant="17" id="Qsm-DV-ILW"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/CommentersListIcon" translatesAutoresizingMaskIntoConstraints="NO" id="7Bw-IQ-tbp">
+                        <rect key="frame" x="8" y="430" width="17" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="cX6-x5-sIf"/>
+                            <constraint firstAttribute="width" constant="17" id="h8h-my-Tl1"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="h07-n4-DgV" secondAttribute="trailing" id="07M-SB-Mi0"/>
+                    <constraint firstItem="4ef-R4-bae" firstAttribute="top" secondItem="d5e-Qd-WoU" secondAttribute="top" id="1pQ-rF-h4E"/>
+                    <constraint firstItem="4ef-R4-bae" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="32q-Jf-EXj"/>
                     <constraint firstItem="TQm-Ad-3iq" firstAttribute="top" secondItem="DCN-Jd-BMd" secondAttribute="bottom" constant="8" id="7gb-D6-ngh"/>
+                    <constraint firstItem="6Gw-h8-Can" firstAttribute="centerY" secondItem="EPr-aP-pSV" secondAttribute="centerY" id="BlS-qF-TGN"/>
+                    <constraint firstItem="TQm-Ad-3iq" firstAttribute="top" secondItem="d5e-Qd-WoU" secondAttribute="bottom" priority="900" constant="8" id="Jat-fO-ZRg"/>
                     <constraint firstItem="TQm-Ad-3iq" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" priority="700" constant="8" id="KNo-zh-q08"/>
                     <constraint firstItem="DCN-Jd-BMd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Kdc-Vf-Rgd"/>
                     <constraint firstAttribute="trailing" secondItem="DCN-Jd-BMd" secondAttribute="trailing" constant="8" id="La6-3G-hlg"/>
                     <constraint firstItem="B5M-0I-S31" firstAttribute="bottom" secondItem="TQm-Ad-3iq" secondAttribute="bottom" id="Lcb-d3-KBT"/>
+                    <constraint firstItem="4ef-R4-bae" firstAttribute="centerY" secondItem="d5e-Qd-WoU" secondAttribute="centerY" id="LtF-kK-n9t"/>
                     <constraint firstAttribute="trailing" secondItem="B5M-0I-S31" secondAttribute="trailing" constant="8" id="Ny1-xo-gFd"/>
+                    <constraint firstItem="6Gw-h8-Can" firstAttribute="centerX" secondItem="EPr-aP-pSV" secondAttribute="centerX" id="PxB-jA-sAY"/>
                     <constraint firstItem="h07-n4-DgV" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" constant="1" id="Q48-yN-yzu"/>
                     <constraint firstItem="B5M-0I-S31" firstAttribute="top" secondItem="TQm-Ad-3iq" secondAttribute="top" id="R5S-My-bez"/>
+                    <constraint firstItem="d5e-Qd-WoU" firstAttribute="leading" secondItem="4ef-R4-bae" secondAttribute="trailing" constant="6" id="RKC-mG-NzC"/>
                     <constraint firstItem="TQm-Ad-3iq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Tc5-MX-qVf"/>
                     <constraint firstAttribute="bottom" secondItem="TQm-Ad-3iq" secondAttribute="bottom" constant="27" id="Usn-Zp-9Mr"/>
+                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="top" secondItem="d5e-Qd-WoU" secondAttribute="bottom" constant="4" id="VMZ-MO-o5V"/>
                     <constraint firstItem="h07-n4-DgV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="W57-RD-aTX"/>
                     <constraint firstAttribute="trailing" secondItem="EPr-aP-pSV" secondAttribute="trailing" id="a0s-oA-S46"/>
-                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="999" constant="10" id="d6m-M6-kfK"/>
+                    <constraint firstItem="d5e-Qd-WoU" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" constant="10" id="bye-Un-Ku8"/>
+                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="997" constant="10" id="d6m-M6-kfK"/>
+                    <constraint firstItem="d5e-Qd-WoU" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="999" constant="10" id="evO-bK-1MN"/>
                     <constraint firstItem="EPr-aP-pSV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="fDr-AQ-CiI"/>
+                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="centerY" secondItem="7Bw-IQ-tbp" secondAttribute="centerY" id="kOI-qM-gfa"/>
                     <constraint firstItem="EPr-aP-pSV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="mPc-8w-nGX"/>
                     <constraint firstItem="TQm-Ad-3iq" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="690" constant="8" id="p9m-3R-d0z"/>
-                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" constant="10" id="zee-VV-RPM"/>
+                    <constraint firstItem="7Bw-IQ-tbp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="qL7-Ga-5cf"/>
+                    <constraint firstItem="d5e-Qd-WoU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="vQX-wx-Xf5"/>
+                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="top" secondItem="7Bw-IQ-tbp" secondAttribute="top" id="xTe-N3-YxW"/>
+                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="leading" secondItem="7Bw-IQ-tbp" secondAttribute="trailing" constant="6" id="z7d-dj-Jle"/>
+                    <constraint firstItem="DCN-Jd-BMd" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" priority="998" constant="10" id="zee-VV-RPM"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="LtF-kK-n9t"/>
+                        <exclude reference="vQX-wx-Xf5"/>
+                        <exclude reference="Kdc-Vf-Rgd"/>
+                        <exclude reference="kOI-qM-gfa"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="collectionView" destination="h07-n4-DgV" id="l03-i2-iAq"/>
+                <outlet property="commentsIconImageView" destination="7Bw-IQ-tbp" id="7jb-JN-pbQ"/>
                 <outlet property="commentsLabel" destination="DCN-Jd-BMd" id="maL-qq-8zv"/>
                 <outlet property="imageViewHeightConstraint" destination="5rH-Iu-Kcd" id="u0I-7j-hbS"/>
+                <outlet property="likesIconImageView" destination="4ef-R4-bae" id="a4A-Ig-x62"/>
+                <outlet property="likesLabel" destination="d5e-Qd-WoU" id="as6-hC-0KB"/>
                 <outlet property="loadingActivityIndicator" destination="6Gw-h8-Can" id="e70-WN-aaJ"/>
                 <outlet property="moreOptionsButton" destination="B5M-0I-S31" id="vGA-wj-gj8"/>
                 <outlet property="photoImageView" destination="EPr-aP-pSV" id="f4q-6k-aBD"/>
             </connections>
-            <point key="canvasLocation" x="640" y="425"/>
+            <point key="canvasLocation" x="-242" y="199"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Assets/Icons/CommentersListIcon" width="52" height="18"/>
+        <image name="Assets/Icons/LikersListIcon" width="52" height="18"/>
+    </resources>
 </document>
